--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="enter_task_description">Enter task description</string>
     <string name="update">Update</string>
     <string name="update_the_task">Update the task</string>
+    <string name="loading">Loading...</string>
 </resources>
