--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,4 +14,6 @@
     <string name="update">Update</string>
     <string name="update_the_task">Update the task</string>
     <string name="loading">Loading...</string>
+    <string name="today_s_task">Today\'s Task</string>
+    <string name="enter_search_title">Enter search title</string>
 </resources>
